[gd_scene load_steps=3 format=3 uid="uid://bog5uc5d4kf0d"]

[ext_resource type="Script" uid="uid://cqlor4gwjnxcs" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://bcr7pkb656wye" path="res://ColorGrid.gd" id="2_0xm2m"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Control2" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -88.0
offset_right = 175.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control2/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ConnectBtn" type="Button" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Connect"

[node name="DisconnectBtn" type="Button" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Disconnect"

[node name="SetupGridBtn" type="Button" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "setupgrid"

[node name="Color1Btn" type="Button" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Color 1"

[node name="ColorAllBtn" type="Button" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Color all"

[node name="ClearBtn" type="Button" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear Tiles"

[node name="PrintServer" type="Button" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear Tiles"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control2"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
offset_left = 463.0
offset_top = 427.0
offset_right = 463.0
offset_bottom = 633.0
rotation = -1.5708
columns = 5
script = ExtResource("2_0xm2m")
